RESOLVED FIXED200282
[WHLSL] Checker sets wrong type for property access instruction with an ander
https://bugs.webkit.org/show_bug.cgi?id=200282
Summary [WHLSL] Checker sets wrong type for property access instruction with an ander
Saam Barati
Reported 2019-07-30 14:10:11 PDT
...
Attachments
WIP (5.09 KB, patch)
2019-07-30 14:41 PDT, Saam Barati
no flags
patch (6.88 KB, patch)
2019-07-30 14:57 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-07-30 14:41:57 PDT
Created attachment 375180 [details] WIP need to write a test and changelog and then it's ready
Saam Barati
Comment 2 2019-07-30 14:57:04 PDT
Robin Morisset
Comment 3 2019-07-30 14:59:36 PDT
Comment on attachment 375183 [details] patch The fix LGTM. Is there a reason for this large test, instead of using the test harness like most recent WHLSL tests?
Saam Barati
Comment 4 2019-07-30 15:09:50 PDT
(In reply to Robin Morisset from comment #3) > Comment on attachment 375183 [details] > patch > > The fix LGTM. > > Is there a reason for this large test, instead of using the test harness > like most recent WHLSL tests? Yes, the harness does the boxing/unboxing for us. We haven't taught it how to take in structs AFAIK
Myles C. Maxfield
Comment 5 2019-07-30 15:13:21 PDT
Comment on attachment 375183 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=375183&action=review > LayoutTests/webgpu/whlsl/device-proper-type-checker.html:23 > +compute void computeShader(device Point[] buffer : register(u0), float3 threadID : SV_DispatchThreadID) { > + float x = buffer[0].x; > + float y = buffer[0].y; > + x += 1.0; > + y += 1.0; > + buffer[0].x = x; > + buffer[0].y = y; > +} Can't we use the fancy harness for this?
Saam Barati
Comment 6 2019-07-30 15:15:57 PDT
(In reply to Myles C. Maxfield from comment #5) > Comment on attachment 375183 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=375183&action=review > > > LayoutTests/webgpu/whlsl/device-proper-type-checker.html:23 > > +compute void computeShader(device Point[] buffer : register(u0), float3 threadID : SV_DispatchThreadID) { > > + float x = buffer[0].x; > > + float y = buffer[0].y; > > + x += 1.0; > > + y += 1.0; > > + buffer[0].x = x; > > + buffer[0].y = y; > > +} > > Can't we use the fancy harness for this? See above.
WebKit Commit Bot
Comment 7 2019-07-30 16:42:37 PDT
Comment on attachment 375183 [details] patch Clearing flags on attachment: 375183 Committed r248022: <https://trac.webkit.org/changeset/248022>
WebKit Commit Bot
Comment 8 2019-07-30 16:42:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-07-30 16:43:16 PDT
Note You need to log in before you can comment on or make changes to this bug.